# gridbash

./: .gitignore  .npmignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Home.md  README.md  SECURITY.md  SUPPORT.md  config.example.toml  package.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  dco.yml  delete-issue-branches.yml  issue-labeler.yml  release.yml  review-agent.yml  star-history.yml
docs/: AUTOMATED_REVIEW.md  COMMUNITY_SETUP.md  DAEMON_ARCHITECTURE.md  LAUNCH_KIT.md  OUTREACH.md  REFERENCE.md  RELEASING.md  ROADMAP.md  V0_2_ANNOUNCEMENT.md  V1_ACCEPTANCE.md  index.html  robots.txt  sitemap.xml
docs/articles/: building-a-windows-pty-grid-in-rust.md
docs/demo/: build-openvid-demo.ps1  capture-openvid-demo.mjs  openvid-gridbash-demo.html  openvid-gridbash-demo.md
docs/devlogs/: 2026-07-07-add-grid-session-resume-command.md  2026-07-07-add-onboarding-tui-mascot.md  2026-07-07-agent-control-tools.md  2026-07-07-dedicated-command-bar.md  2026-07-07-default-multi-select-input.md  2026-07-07-delete-issue-branches-after-closure.md  2026-07-07-expose-latest-version-and-devlogs.md  2026-07-07-fix-exact-version-release.md  2026-07-07-fix-npm-trusted-publishing-cli.md  2026-07-07-fix-redraw-lag-clippy.md  2026-07-07-fix-release-publish-retry.md  2026-07-07-fix-terminal-r-autoinput-regression.md  2026-07-07-fix-terminal-selection-containment.md  2026-07-07-hidden-manager-agent-groups.md  2026-07-07-idle-terminal-todo-prompts.md  2026-07-07-integrate-hidden-manager-agent-groups.md  2026-07-07-integrate-native-auth-manager.md  2026-07-07-integrate-quiet-output-badges.md  2026-07-07-integrate-session-resume-branch.md  2026-07-07-integrate-tabbed-grids.md  2026-07-07-manage-pane-git-worktrees.md  2026-07-07-native-auth-profile-manager.md  2026-07-07-optimize-runtime-hot-paths.md  2026-07-07-reduce-interactive-input-redraw-lag.md  2026-07-07-remove-stale-saved-setup-schema.md  2026-07-07-rename-panes.md  2026-07-07-restart-exited-terminal-panes.md  2026-07-07-restyle-settings-pane.md  2026-07-07-run-releases-through-ci-cd.md  2026-07-07-runtime-grid-color-palette-settings.md  2026-07-07-runtime-grid-resizing.md  2026-07-07-show-auth-usage-in-gridcell-headers.md  2026-07-07-show-conversation-summaries-in-pane-footers.md  2026-07-07-show-output-done-pane-badges.md  2026-07-07-sleep-terminal-panes.md  2026-07-07-startup-picker-and-release-automation.md  2026-07-07-stop-terminal-active-state-color-flicker.md  2026-07-07-stop-terminal-startup-from-auto-inputting-r.md  2026-07-07-swap-selected-tiles.md  2026-07-08-finish-remaining-agent-merges.md  (+77 more)
docs/releases/: README.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.2.0-macos.1.md  v0.2.0.md
native/macos/: GridBash.Info.plist  (+2 more)
src/: actions.rs  app.rs  auth.rs  cli.rs  codex_sqlite.rs  composer.rs  config.rs  control.rs  control_discovery.rs  copy_mode.rs  image_preview.rs  keybindings.rs  layout.rs  main.rs  manager.rs  onboarding.rs  orchestrator.rs  output_capture.rs  pane_host.rs  ports.rs  process_priority.rs  profiles.rs  pty.rs  resume_picker.rs  session.rs  setup.rs  ui.rs  usage.rs  vibe.rs  voice.rs  voice_model.rs  worktrees.rs
(+60 files in other folders)
