[package]
name = "gridbash"
version = "0.1.2"
edition = "2024"
description = "A fast, beautiful terminal grid for running many CLI agents."
license = "MIT"
repository = "https://github.com/jasonsuhari/gridbash"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0"
portable-pty = "0.9"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
vt100 = "0.16"
