[package]
name = "gridbash"
version = "0.2.0"
edition = "2024"
description = "Cross-platform terminal grid for running Codex, Claude, Gemini, and other CLI agents side by side."
license = "MIT"
repository = "https://github.com/jasonsuhari/gridbash"
homepage = "https://jasonsuhari.github.io/gridbash/"
keywords = ["terminal", "tui", "agents", "windows", "macos"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0"
fs4 = "1.1"
getrandom = "0.3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
portable-pty = "0.9"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
vt100 = "0.16"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = "0.18"
sha2 = "0.10"
whisper-rs = "0.16"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
